Add requirements.txt file

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 SECRET_KEY=y)ivpsivj3_-=)#vq%gh#6&xcyo=_gom66tvellsx#1$^ag-3c
 DEBUG=True
-ALLOWED_HOSTS=.s-pro.online
+ALLOWED_HOSTS=.localhost,127.0.0.1
